--- a/time_left_in_2022.html
+++ b/time_left_in_2022.html
@@ -21,13 +21,13 @@
             border-radius: 5px;
         }
         #days{
-            background-color:#0f4d4f;
+            background-color:#F0E4D4;
         }
         #hours{
-            background-color:#4CAF50;
+            background-color:#C9BA9B;
         }
         #minutes{
-            background-color:#76250b;
+            background-color:#917B56;
         }
         h2{
             display: inline-block;
